@startuml

package fiat_nodes {
    class FunctionNodeLinkGui{
        The GUI representation
         for a FunctionNodeLink
        ---
        + function_node_link
        ---
        (specific to imgui-node-editor)
        + link_id: ed.LinkId
        + start_id: ed.PinId
        + end_id: ed.PinId
    }



    class FunctionNodeGui {
        The GUI representation
        for a FunctionNode
        ---
        function_node
        ---
        (specific to imgui-node-editor)
        + node_id: ed.NodeId
        + pins_input: Dict[str, ed.PinId]
        + pins_output: Dict[str, ed.PinId]
    }


    class FunctionsGraphGui {
        The GUI representation
        for a FunctionsGraph
        ---
        functions_graph
        function_nodes_gui: List[FunctionNodeGui]
        functions_links_gui: List[FunctionNodeLinkGui]
    }

    FunctionsGraphGui *-- FunctionNodeLinkGui: many
    FunctionsGraphGui *-- FunctionNodeGui: many
}
note top of fiat_nodes
    The GUI representation, using imgui-node-editor
end note

fiat_nodes.FunctionNodeGui o-- fiat_core.FunctionNode
fiat_nodes.FunctionsGraphGui o-- fiat_core.FunctionsGraph
fiat_nodes.FunctionNodeLinkGui o-- fiat_core.FunctionNodeLink


@enduml
